// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when not visible 1`] = `
<div
  className="autocomplete-suggestions"
>
  <div
    className="autocomplete-title"
  >
    Search for a product
  </div>
</div>
`;

exports[`renders correctly when visible 1`] = `
<div
  className="autocomplete-suggestions show"
>
  <div
    className="autocomplete-title"
  >
    Search for a product
  </div>
</div>
`;
